--- a/Adminlogin.html
+++ b/Adminlogin.html
@@ -2,24 +2,37 @@
 <html>
 <head>
 	<title>Admin Page</title>
+	<link rel="stylesheet" type="text/css" href="admin-styles.css">
 </head>
 <body>
-	<h1>Welcome to the Admin Page</h1>
-	<p>Please enter your email address:</p>
-	<input type="email" id="emailInput" placeholder="Enter your email address">
+	<div id="sidebar">
+		<div class="logo">
+			<i class="fas fa-code"></i>
+			<h3>Admin Page</h3>
+		</div>
+		<ul class="items">
+			<li><a href="#">Dashboard</a></li>
+			<li><a href="#">Users</a></li>
+			<li><a href="#">Settings</a></li>
+			<li><a href="#">Logout</a></li>
+		</ul>
+	</div>
+	<div id="main-content">
+		<h1 class="welcome-name">Welcome to the Admin Page</h1>
+		<p>Please enter your email address:</p>
+		<input type="email" id="emailInput" placeholder="Enter your email address">
+		<button onclick="checkEmail()">Submit</button>
+	</div>
+<script>
+	function checkEmail() {
+		const email = document.getElementById("emailInput").value;
 
-	<button onclick="checkEmail()">Submit</button>
-
-	<script>
-		function checkEmail() {
-			const email = document.getElementById("emailInput").value;
-
-			if (email.endsWith("@student.allenisd.org")) {
-				alert("You are an admin user!");
-			} else {
-				alert("Sorry, you are not authorized to access this page.");
-			}
+		if (email.endsWith("@student.allenisd.org")) {
+			alert("You are an admin user!");
+		} else {
+			alert("Sorry, you are not authorized to access this page.");
 		}
-	</script>
+	}
+</script>
 </body>
 </html>
