--- a/landing.html
+++ b/landing.html
@@ -24,5 +24,14 @@
                 <a href="signup.html" class="get-started">Get Started</a>
             </div>
         </section>
+        <section class="bubble">
+            
+        </section>
+        <section class="bubble-middle">
+
+        </section>
+        <section class="bubble-bottom">
+            
+        </section>
     </body>
 </html>
