Login/Signup Initial Pages

--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="login.css">
         <link rel="icon" type="image/png" href="images/autoattendlogo.png"/>
     </head>
-    <body>
+    <body=
         <nav>
             <div class="nav-items">
                 <a href="landing.html">Home</a>
