added redirect to attendance report page from admin login page

--- a/Adminlogin.html
+++ b/Adminlogin.html
@@ -28,7 +28,8 @@
 		const email = document.getElementById("emailInput").value;
 
 		if (email.endsWith("@student.allenisd.org")) {
-			alert("You are an admin user!");
+            window.location.href = "AttendanceReport.html";
+			//alert("You are an admin user!");
 		} else {
 			alert("Sorry, you are not authorized to access this page.");
 		}
