updated AttendanceReport.html to allow the attendance status to be changed by teachers

--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -30,21 +30,39 @@
       <tbody>
         <tr>
           <td>John Doe</td>
-          <td class="present">Present</td>
+          <td>
+            <select>
+              <option value="present">Present</option>
+              <option value="absent">Absent</option>
+              <option value="tardy">Tardy</option>
+            </select>
+          </td>
           <td>01/01/2023</td>
         </tr>
         <tr>
           <td>Jane Smith</td>
-          <td class="absent">Absent</td>
+          <td>
+            <select>
+              <option value="present">Present</option>
+              <option value="absent">Absent</option>
+              <option value="tardy">Tardy</option>
+            </select>
+          </td>
           <td>01/01/2023</td>
         </tr>
         <tr>
           <td>Bob Johnson</td>
-          <td class="present">Present</td>
+          <td>
+            <select>
+              <option value="present">Present</option>
+              <option value="absent">Absent</option>
+              <option value="tardy">Tardy</option>
+            </select>
+          </td>
           <td>01/01/2023</td>
         </tr>
       </tbody>
     </table>
   </div>
 </body>
-</html>
+</html> 
