added a question form and note to the FAQ page

--- a/FAQ.html
+++ b/FAQ.html
@@ -39,6 +39,18 @@
 
         <h2>Is the facial recognition system compliant with privacy laws?</h2>
         <p>Yes, the facial recognition system is compliant with all relevant privacy laws and regulations. It is designed to protect student data and privacy, and only authorized personnel can access the data.</p>
+      
+        <h2>Ask a question to the developers</h2>
+        <form>
+          <label for="name">Name:</label><br>
+          <input type="text" id="name" name="name"><br>
+          <label for="email">Email:</label><br>
+          <input type="email" id="email" name="email"><br>
+          <label for="question">Question:</label><br>
+          <textarea id="question" name="question"></textarea><br><br>
+          <input type="submit" value="Submit">
+        </form>
+        <p>Please note that it may take some time for the developers to respond to your question, but they will do their best to provide a helpful answer. Thank you for using our student attendance tracking system!        </p>
       </main>
     </div>
   </body>
