fixed the New Class button

--- a/classes.html
+++ b/classes.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="create-buttons">
-                <a href="/">
+                <a href="Newclass.html">
                     <div class="new-class-button">
                         <div class="new-class-button-wrapper">
                             <i class="fa-solid fa-plus"></i>
