--- a/period-display.html
+++ b/period-display.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" onload="studentCount()">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/png" href="images/projectlogo.png"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
-    <body>
+    <body onload="studentCount()">
 
         <section id="sidebar">
             <img src="images/projectlogo.png" class="logo">
@@ -27,17 +27,17 @@
         <section id="main-content">
             <div class="welcome-name">
                 <h1>Period 1</h1>
-                <h3># students</h3>
+                <h3 id="countDisplay"></h3>
             </div>
 
             <main class="table">
                 <section class="table-header">
                     <h1>Students</h1>
-                    <input type="text" placeholder="Search">
+                    <input type="text" id="myInput" onkeyup="filterFunction()" placeholder="Search">
                 </section>
 
                 <section class="table-body">
-                    <table width="100%">
+                    <table width="100%" id="tableID">
                         <thead>
                             <tr>
                                 <th>Name</th>
@@ -181,7 +181,6 @@
               </div>
               <script src="add-student.js"></script>
         </section>
-
         
     </body>
 </html>
