fixed attendance update problem by adding a column to html table so that manual attendance updates are separate

--- a/AttendanceReport - UpdateTesting.html
+++ b/AttendanceReport - UpdateTesting.html
@@ -24,6 +24,7 @@
         <tr>
           <th>Student Name</th>
           <th>Attendance Status</th>
+          <th>Attendance Status Manual</th>
           <th>Date</th>
         </tr>
       </thead>
@@ -33,6 +34,14 @@
           <td>
             Tardy
           </td>
+          <td>
+            <select>
+              <option value="select">[Select]</option>
+              <option value="present">Present</option>
+              <option value="absent">Absent</option>
+              <option value="tardy">Tardy</option>
+            </select>
+          </td>
           <td>01/01/2023</td>
         </tr>
         <tr>
@@ -40,12 +49,28 @@
           <td>
             Absent
           </td>
+          <td>
+            <select>
+              <option value="select">[Select]</option>
+              <option value="present">Present</option>
+              <option value="absent">Absent</option>
+              <option value="tardy">Tardy</option>
+            </select>
+          </td>
           <td>01/01/2023</td>
         </tr>
         <tr>
           <td>Bob Johnson</td>
           <td>
             Present
+          </td>
+          <td>
+            <select>
+              <option value="select">[Select]</option>
+              <option value="present">Present</option>
+              <option value="absent">Absent</option>
+              <option value="tardy">Tardy</option>
+            </select>
           </td>
           <td>01/01/2023</td>
         </tr>
