added a python script that fixed the attendance updating conflict with the html page

--- a/AttendanceReport - UpdateTesting.html
+++ b/AttendanceReport - UpdateTesting.html
@@ -31,33 +31,21 @@
         <tr>
           <td>John Doe</td>
           <td>
-            <select>
-              <option value="present">Present</option>
-              <option value="absent">Absent</option>
-              <option value="tardy">Tardy</option>
-            </select>
+            Tardy
           </td>
           <td>01/01/2023</td>
         </tr>
         <tr>
           <td>Jane Smith</td>
           <td>
-            <select>
-              <option value="present">Present</option>
-              <option value="absent">Absent</option>
-              <option value="tardy">Tardy</option>
-            </select>
+            Absent
           </td>
           <td>01/01/2023</td>
         </tr>
         <tr>
           <td>Bob Johnson</td>
           <td>
-            <select>
-              <option value="present">Present</option>
-              <option value="absent">Absent</option>
-              <option value="tardy">Tardy</option>
-            </select>
+            Present
           </td>
           <td>01/01/2023</td>
         </tr>
