--- a/Newclass.html
+++ b/Newclass.html
@@ -38,7 +38,7 @@
 
         <div class="create-buttons">
           <div class="edit-classes-button-wrapper">
-            <a type="submit" class="edit-classes-button"><i class="fas fa-edit"></i>Create Class</a>
+            <a href="classes.html" class="edit-classes-button"><i class="fas fa-edit"></i>Create Class</a>
           </div>
           <div class="new-class-button-wrapper">
             <a href="add-student.html" class="new-class-button"><i class="fas fa-plus"></i>Add Students</a>
